--- a/SAM/Views/Shared/Partials/_Navigation.cshtml
+++ b/SAM/Views/Shared/Partials/_Navigation.cshtml
@@ -22,7 +22,7 @@
             <i class="bi bi-chevron-left"></i>
         </button>
     </div>
-    
+
     <ul class="sidebar-nav" role="menubar">
         <li class="nav-item" role="none">
             <a class="nav-link" asp-controller="Dashboard" asp-action="Index" role="menuitem" data-tooltip="Dashboard">
@@ -52,33 +52,6 @@
             </li>
         }
 
-        @if (isCompanyAdmin)
-        {
-            <li class="nav-item nav-dropdown-item" role="none">
-                <button class="nav-dropdown-toggle" type="button" aria-expanded="false" aria-controls="dropdown-system-admin" data-dropdown="system-admin" data-tooltip="System Administration">
-                    <i class="bi bi-gear"></i>
-                    <span class="nav-link-text">System Administration</span>
-                    <i class="bi bi-chevron-down nav-dropdown-chevron"></i>
-                </button>
-                <ul class="nav-dropdown" id="dropdown-system-admin" role="menu">
-                    @if (isAdmin)
-                    {
-                        <li class="nav-item" role="none">
-                            <a class="nav-link" asp-controller="SystemAdmin" asp-action="Companies" role="menuitem" data-tooltip="Companies">
-                                <i class="bi bi-building"></i>
-                                <span class="nav-link-text">Companies</span>
-                            </a>
-                        </li>
-                    }
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="SystemAdmin" asp-action="SystemAdmin" asp-route-tab="facilities" role="menuitem" data-tooltip="System Administration">
-                            <i class="bi bi-gear"></i>
-                            <span class="nav-link-text">System Administration</span>
-                        </a>
-                    </li>
-                </ul>
-            </li>
-        }
 
         @if (isOperator)
         {
@@ -132,57 +105,45 @@
 
         @if (isCompanyAdmin)
         {
-            <li class="nav-item nav-dropdown-item" role="none">
-                <button class="nav-dropdown-toggle" type="button" aria-expanded="false" aria-controls="dropdown-user-management" data-dropdown="user-management" data-tooltip="User Management">
-                    <i class="bi bi-people"></i>
-                    <span class="nav-link-text">User Management</span>
-                    <i class="bi bi-chevron-down nav-dropdown-chevron"></i>
-                </button>
-                <ul class="nav-dropdown" id="dropdown-user-management" role="menu">
-                    @if (isAdmin)
-                    {
-                        <li class="nav-item" role="none">
-                            <a class="nav-link" asp-controller="UserManagement" asp-action="Users" role="menuitem" data-tooltip="Users">
-                                <i class="bi bi-people"></i>
-                                <span class="nav-link-text">Users</span>
-                            </a>
-                        </li>
-                    }
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="UserManagement" asp-action="UserRequests" role="menuitem" data-tooltip="User Requests">
-                            <i class="bi bi-person-plus"></i>
-                            <span class="nav-link-text">User Requests</span>
-                        </a>
-                    </li>
-                </ul>
+            <li class="nav-item" role="none">
+                <a class="nav-link" asp-controller="SystemAdmin" asp-action="SystemAdmin" asp-route-tab="facilities" role="menuitem" data-tooltip="System Administration">
+                    <i class="bi bi-gear"></i>
+                    <span class="nav-link-text">System Administration</span>
+                </a>
             </li>
         }
 
-        @if (isAdmin)
+        @if (isCompanyAdmin)
         {
-            <li class="nav-item nav-dropdown-item" role="none">
-                <button class="nav-dropdown-toggle" type="button" aria-expanded="false" aria-controls="dropdown-administration" data-dropdown="administration" data-tooltip="Administration">
-                    <i class="bi bi-shield-check"></i>
-                    <span class="nav-link-text">Administration</span>
-                    <i class="bi bi-chevron-down nav-dropdown-chevron"></i>
-                </button>
-                <ul class="nav-dropdown" id="dropdown-administration" role="menu">
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="UserManagement" asp-action="CompanyRequests" role="menuitem" data-tooltip="Company Requests">
-                            <i class="bi bi-building-add"></i>
-                            <span class="nav-link-text">Company Requests</span>
-                        </a>
-                    </li>
-                    <li class="nav-item" role="none">
-                        <a class="nav-link" asp-controller="UserManagement" asp-action="AdminRequests" role="menuitem" data-tooltip="Admin Requests">
-                            <i class="bi bi-shield-check"></i>
-                            <span class="nav-link-text">Admin Requests</span>
-                        </a>
-                    </li>
-                </ul>
+            <li class="nav-item" role="none">
+                <a class="nav-link" asp-controller="UserManagement" asp-action="Index" role="menuitem" data-tooltip="User Management">
+                    <i class="bi bi-people"></i>
+                    <span class="nav-link-text">User Management</span>
+                </a>
             </li>
         }
+
     </ul>
+
+    @if (isAdmin)
+    {
+        <div class="sidebar-footer">
+            <ul class="sidebar-nav" role="menubar">
+                <li class="nav-item" role="none">
+                    <a class="nav-link" asp-controller="CompanyManagement" asp-action="Index" role="menuitem" data-tooltip="Company Management">
+                        <i class="bi bi-building-gear"></i>
+                        <span class="nav-link-text">Company Management</span>
+                    </a>
+                </li>
+                <li class="nav-item" role="none">
+                    <a class="nav-link" asp-controller="UserManagement" asp-action="AdminRequests" role="menuitem" data-tooltip="Admin Requests">
+                        <i class="bi bi-shield-check"></i>
+                        <span class="nav-link-text">Admin Requests</span>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    }
 </nav>
 
 <div class="sidebar-overlay" id="sidebarOverlay"></div>
